more(summary): updates docs and + cli stuff
