# core/api.go
@@ -115,9 +115,7 @@ func (a *api) Start() {
 	// v0 routes
 	v0 := router.Group("/api/v0")
 	{
-		v0.GET("/summary", func(g *gin.Context) {
-			pbJSON(g, http.StatusOK, a.node.Summary())
-		})
+		v0.GET("/summary", a.nodeSummary)
 
 		v0.GET("/ping", a.ping)
 
@@ -329,6 +327,16 @@ func (a *api) readArgs(g *gin.Context) ([]string, error) {
 		}
 	}
 	return args, nil
+}
+
+// summary godoc
+// @Summary Get a summary of node data
+// @Tags utils
+// @Produce application/json
+// @Success 200 {object} pb.Summary "summary"
+// @Router /summary [get]
+func (a *api) nodeSummary(g *gin.Context) {
+	pbJSON(g, http.StatusOK, a.node.Summary())
 }
 
 func (a *api) readOpts(g *gin.Context) (map[string]string, error) {
